# AI-hackaton

./: .gitignore  README.md  init_db.py
API/: Dockerfile  README.md  example_client.py  example_server.py  main.py  requirements.txt
API/src/: db.py  handler.py  prepare_data.py
API/src/protos/: protobuf.proto  protobuf_pb2.py  protobuf_pb2.pyi  protobuf_pb2_grpc.py
PostgreSQL/: Knowledge_Base.csv  README.md  init_db.py  requirements.txt
PostgreSQL/src/: db.py
Telegram bot/: Dockerfile  README.md  example_client.py  langchain_file.py  main.py  pyproject.toml  requirements.txt  text2image.py
Telegram bot/scripts/: script.sh
src/: db.py
